FIXED mobile issue with alignemnt

--- a/src/layout/CarouselBanner/_carousel-banner.scss
+++ b/src/layout/CarouselBanner/_carousel-banner.scss
@@ -1,4 +1,3 @@
 .carousel-banner {
   background-color: rgba(66, 4, 91, 0.83);
-  border: 1px solid red;
 }
