--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -37,8 +37,6 @@ h3 {
   font-size: clamp(1.2rem, 4vw, 2rem);  
 }
 
-
-
 #portfolio, 
 #special-sauce, 
 #nom-nom, 
@@ -49,8 +47,8 @@ h3 {
 }
 
 section {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
+  margin-top: 5rem !important;
+  margin-bottom: 5rem !important;
 }
 
 .backdrop-effect {
